--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "files": [
     "bin",
+    "src",
     "templates",
     "README.md",
     "LICENSE"
@@ -25,11 +26,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@clack/prompts": "^0.7.0",
+    "@clack/prompts": "^0.11.0",
     "boxen": "^7.1.1",
     "kleur": "^4.1.5",
     "minimist": "^1.2.8",
-    "ora": "^8.0.1",
     "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
