--- a/templates/vanilla-js/package.json
+++ b/templates/vanilla-js/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write \"src/**/*.{js,ts}\"",
+    "format:check": "prettier --check \"src/**/*.{js,ts}\""
   },
   "dependencies": {
     "textmode.js": "latest"
   },
   "devDependencies": {
+    "prettier": "^3.7.4",
     "vite": "^7.2.7"
   }
 }
