--- a/templates/vanilla-js/package.json
+++ b/templates/vanilla-js/package.json
@@ -8,13 +8,17 @@
     "build": "vite build",
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{js,ts}\"",
-    "format:check": "prettier --check \"src/**/*.{js,ts}\""
+    "format:check": "prettier --check \"src/**/*.{js,ts}\"",
+    "lint": "eslint src --ext .js",
+    "lint:fix": "eslint src --ext .js --fix"
   },
   "dependencies": {
     "textmode.js": "latest"
   },
   "devDependencies": {
     "prettier": "^3.7.4",
-    "vite": "^7.2.7"
+    "vite": "^7.2.7",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8"
   }
 }
