--- a/templates/vanilla-js/package.json
+++ b/templates/vanilla-js/package.json
@@ -16,9 +16,11 @@
     "textmode.js": "latest"
   },
   "devDependencies": {
-    "prettier": "^3.7.4",
-    "vite": "^7.2.7",
+    "@eslint/js": "^9.39.1",
     "eslint": "^9.39.1",
-    "eslint-config-prettier": "^10.1.8"
+    "eslint-config-prettier": "^10.1.8",
+    "globals": "^15.14.0",
+    "prettier": "^3.7.4",
+    "vite": "^7.2.7"
   }
 }
