--- a/templates/vanilla-ts/package.json
+++ b/templates/vanilla-ts/package.json
@@ -17,13 +17,14 @@
     "textmode.js": "latest"
   },
   "devDependencies": {
-    "prettier": "^3.7.4",
-    "typescript": "^5.9.3",
-    "vite": "^7.2.7",
+    "@eslint/js": "^9.39.1",
+    "@types/node": "^24.10.2",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
-    "@types/node": "^24.10.2",
-    "@typescript-eslint/parser": "^8.49.0",
-    "@typescript-eslint/eslint-plugin": "^8.49.0"
+    "globals": "^15.14.0",
+    "prettier": "^3.7.4",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.49.0",
+    "vite": "^7.2.7"
   }
 }
